<resources>
    <string name="app_name">Alice Cleaning Management</string>
    <!--<string name="facebook_app_id">202784400638411</string>-->
    <string name="text_login">LOGIN</string>
    <string name="text_remember_id">Remember ID</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_task">Task</string>
    <string name="text_task_new">New Task</string>
    <string name="text_customer">Customer</string>
    <string name="text_staff">Staff</string>
    <string name="text_setting">Setting</string>
    <string name="text_id">ID</string>
    <string name="text_password">Password</string>
    <string name="text_password_confirm">Password Confirm</string>
    <string name="text_company_name">Company Name</string>
    <string name="text_owner_first_name">Owner First Name</string>
    <string name="text_owner_last_name">Owner Last Name</string>
    <string name="text_first_name">First Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_name">Name</string>
    <string name="text_working_time">Working Time</string>
    <string name="text_wages">Wages</string>
    <string name="text_email_address">E-mail address</string>
    <string name="text_address">Address</string>
    <string name="text_date">Date</string>
    <string name="text_time">Time</string>
    <string name="text_cleaning_hours">Cleaning Hours</string>
    <string name="text_cleaning_date">Cleaning Date</string>
    <string name="text_cleaning_start_time">Start Time</string>
    <string name="text_cleaning_end_time">End Time</string>
    <string name="text_type_of_cleaning">Type of Cleaning</string>
    <string name="text_task_status">Task Status</string>
    <string name="text_note">Note</string>
    <string name="text_paid">Paid</string>
    <string name="text_unpaid">Unpaid</string>
    <string name="text_available_time">Available Time</string>
    <string name="text_day_of_birth">Day of Birth</string>
    <string name="text_working_history">Working History</string>
    <string name="text_account_number">Account Number</string>
    <string name="text_bank">Bank</string>
    <string name="text_send_sms">Send SMS</string>
    <string name="text_send">Send</string>
    <string name="text_involved_team_members">Involved Team Members</string>
    <string name="text_add_team_members">Add Team Members</string>
    <string name="text_mobile_number">Mobile Number</string>
    <string name="text_number_of_room">Number of Rooms</string>
    <string name="text_request_history">Request History</string>
    <string name="text_number_of_bathroom">Number of Bathrooms</string>
    <string name="text_agreement">I agree to the Alice Cleaning Management Terms of Service and Privacy Policy</string>
    <string name="text_no_internet">There is no internet connection. \nTo use this service, please connect internet.</string>
    <string name="text_please_enter">Please, enter.</string>
    <string name="text_different_password">The entered passwords are different.</string>
    <string name="text_id_check">ID Check</string>
    <string name="text_available_id">Available ID.\nPlease continue.</string>
    <string name="text_unavailable_id">It is already registered ID.\nPlease enter a different ID.</string>
    <string name="text_notice_check_id">Please check your ID</string>
    <string name="text_login_fail">Invalid ID or password.\nPlease check your ID and password.</string>
    <string name="text_login_wait_approval">Please wait for your approval.</string>
    <string name="text_no_list">There is no list to display.</string>
    <string name="text_register">Register</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_save">Save</string>
    <string name="text_share">Share</string>
    <string name="text_ok">OK</string>
    <string name="text_modify">Modify</string>
    <string name="text_delete">Delete</string>
    <string name="text_cleaning_schedule">Cleaning Schedule</string>
    <string name="search_task_hint">Search Task</string>
    <string name="search_staff_hint">Search Staff</string>
    <string name="search_customer_hint">Search Customer</string>
    <string name="text_month">Month</string>
    <string name="text_week">Week</string>
    <string name="text_day">Day</string>
    <string name="text_loading">Loading..</string>
    <string name="text_alert_title">Notice</string>
    <string name="text_success_register">Successfully registered.\nPlease wait for your approval to process.</string>
    <string name="text_success_save">Successfully saved.</string>
    <string name="text_success_delete">Successfully deleted.</string>
    <string name="text_fail_register">An error occurred during registration.\nPlease try again later.</string>
    <string name="text_fail">An error occurred during process.\nPlease try again later.</string>
    <string name="text_no_route_host">The host is unreachable.\nPlease try again later.</string>
    <string name="text_confirm_delete_staff">Do you want to delete the staff?</string>
    <string name="text_confirm_delete_customer">Do you want to delete the customer?</string>
    <string name="text_confirm_delete_task">Do you want to delete the task?</string>
    <string name="text_sun_day">Sun</string>
    <string name="text_mon_day">Mon</string>
    <string name="text_tue_day">Tue</string>
    <string name="text_wed_day">Wed</string>
    <string name="text_thu_day">Thu</string>
    <string name="text_fri_day">Fri</string>
    <string name="text_sat_day">Sat</string>
    <string name="text_receiving_number">Receiving number</string>
    <string name="text_message">Message</string>
    <string name="text_privacy_policy">Privacy Policy</string>
    <string name="text_pay_per_hour">Pay per hour</string>
    <string name="text_developer">Developer</string>
    <string name="text_facebook">Facebook</string>
    <string name="text_developer_name">Myunghwa Park</string>
    <string name="text_developer_facebook">https://www.facebook.com/myunghwa.park.3994</string>
    <string name="text_contact_email">Contact e-mail</string>
    <string name="text_contact_developer_email">mocaming@gmail.com</string>

    <!--  we need to use video ids instead of video link  -->
    <string-array name="video_id_array">
        <item>-C-ic2H24OU</item>
        <item>uwa3f3ghBro</item>
        <item>bvjcAqXvvNw</item>
        <item>Y4yIQLadw18</item>
    </string-array>
</resources>
