<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgColor"
    tools:context=".common.LoginActivity">

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="216dp"
        android:maxWidth="400dp"
        android:maxHeight="216dp"
        android:adjustViewBounds="true"
        android:background="@drawable/broom_background"
        android:orientation="vertical"
        android:scaleType="fitXY"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_gravity="top|center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_gravity="top|center_horizontal"
        android:gravity="center|top">

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/transparency"
            android:layout_gravity="right"
            android:gravity="right|center_vertical"
            android:text="@string/text_sign_up"
            android:textColor="@color/redOrange"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_id"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/box_border_gray"
            android:hint="@string/text_id"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/box_border_gray"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/black"
            android:hint="@string/text_password"
            android:textSize="16sp"
            android:imeOptions="actionDone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/checkbox_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_remember_id"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_login"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:background="@drawable/btn_red_orange_selector"
            android:gravity="center"/>

    </LinearLayout>


</FrameLayout>