<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/bgColor"
    tools:context=".common.SettingActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">


        <TableRow
            android:id="@+id/btn_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/list_line">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/text_privacy_policy"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_arrow"
                android:adjustViewBounds="true"
                android:background="#00000000"
                android:maxHeight="20dp"
                android:maxWidth="25dp"
                android:layout_marginRight="5dp"
                android:scaleType="fitEnd"
                android:layout_gravity="right|top"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:id="@+id/layout_pay_per_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/list_line">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/text_pay_per_hour"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_pay_per_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/redOrange"
                android:layout_weight="1"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/list_line">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/text_developer"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/text_developer_name"
                android:textColor="@color/redOrange"
                android:layout_weight="1"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/list_line">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/text_contact_email"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/text_contact_developer_email"
                android:textColor="@color/redOrange"
                android:layout_weight="1"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:id="@+id/btn_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/list_line">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/text_facebook"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_arrow"
                android:adjustViewBounds="true"
                android:background="#00000000"
                android:maxHeight="20dp"
                android:maxWidth="25dp"
                android:layout_marginRight="5dp"
                android:scaleType="fitEnd"
                android:layout_gravity="right|top"
                android:layout_weight="1" />

        </TableRow>

    </TableLayout>
</LinearLayout>