<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgColor">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/btn_close"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/btn_close_white"
            android:layout_margin="10dp"
            android:layout_gravity="right|center_horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/text_send_sms"
            android:gravity="center_horizontal"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/text_receiving_number"
            android:textSize="16sp"
            android:textColor="@color/redOrange" />

        <EditText
            android:id="@+id/edit_receiving_number"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@drawable/box_border_gray"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/text_message"
            android:textSize="16sp"
            android:textColor="@color/redOrange" />

        <EditText
            android:id="@+id/edit_message"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@drawable/box_border_gray" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginBottom="20dp"
        android:baselineAligned="false"
        android:gravity="center|center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_gray_selector"
            android:gravity="center"
            android:text="@string/text_cancel"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_red_orange_selector"
            android:gravity="center"
            android:text="@string/text_send"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>
